--- a/testimonial.html
+++ b/testimonial.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>mical</title>
+      <title>A3E AutoGarage</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -65,19 +65,13 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="furnitures.html">Furnitures</a>
+                                 <a class="nav-link" href="furnitures.html">Services</a>
                               </li>
                               <li class="nav-item active">
                                  <a class="nav-link" href="testimonial.html">Testimonial</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact Us</a>
-                              </li>
-                              <li class="nav-item d_none">
-                                 <a class="nav-link" href="#"><i class="fa fa-user-circle padd_right" aria-hidden="true"></i>Login/Register</a>
-                              </li>
-                              <li class="nav-item d_none">
-                                 <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                               </li>
                            </ul>
                         </div>
@@ -97,7 +91,7 @@
                <div class="col-md-12">
                   <div class="titlepage">
                      <h2>Testimonial</h2>
-                     <p>It is a long established fact that a reader will be distracted by the </p>
+                     <p>Beberapa pelanggan bersuara tentang kami.</p>
                   </div>
                </div>
             </div>
@@ -117,17 +111,17 @@
                                     <div class="col-md-6 margin_boot">
                                        <div class="test_box">
                                           <i><img src="images/tes.jpg" alt="#"/></i>
-                                          <h4>JCKOLO</h4>
-                                          <span>(It is a long )</span>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as </p>
+                                          <h4>Marko</h4>
+                                          <span>PNS</span>
+                                          <p>Gila Sumpah gk ngotak bengkel ini keren banget, pelayanan puas, gk neko neko good job pokok nya. </p>
                                        </div>
                                     </div>
                                     <div class="col-md-6 margin_boot">
                                        <div class="test_box">
                                           <i><img src="images/tes1.jpg" alt="#"/></i>
-                                          <h4>ROCOYO</h4>
-                                          <span>(It is a long )</span>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as </p>
+                                          <h4>Royco</h4>
+                                          <span>Bumbu Kaldu</span>
+                                          <p>Wah ini sih gk waras pelayanan nya gk ngotak kita dikasi kopi pula, buset dah Trusted deh pokok nya !!</p>
                                        </div>
                                     </div>
                                  </div>
@@ -141,17 +135,17 @@
                                     <div class="col-md-6 margin_boot">
                                        <div class="test_box">
                                           <i><img src="images/tes.jpg" alt="#"/></i>
-                                          <h4>JCKOLO</h4>
-                                          <span>(It is a long )</span>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as </p>
+                                          <h4>Ajinomoto</h4>
+                                          <span>Bumbu Dapur</span>
+                                          <p>Gk ngotak sih baru sekali kesini udh mau nagih</p>
                                        </div>
                                     </div>
                                     <div class="col-md-6 margin_boot">
                                        <div class="test_box">
                                           <i><img src="images/tes1.jpg" alt="#"/></i>
-                                          <h4>ROCOYO</h4>
-                                          <span>(It is a long )</span>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as </p>
+                                          <h4>Chocolatos</h4>
+                                          <span>rokok boongan</span>
+                                          <p>ini isinyatestimoni nanti kumpulin aja apa aja capek ngetik sumpah</p>
                                        </div>
                                     </div>
                                  </div>
@@ -165,17 +159,17 @@
                                     <div class="col-md-6 margin_boot">
                                        <div class="test_box">
                                           <i><img src="images/tes.jpg" alt="#"/></i>
-                                          <h4>JCKOLO</h4>
-                                          <span>(It is a long )</span>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as </p>
+                                          <h4>Sakura</h4>
+                                          <span>Mie yg gk laku</span>
+                                          <p>ini isinyatestimoni nanti kumpulin aja apa aja capek ngetik sumpah </p>
                                        </div>
                                     </div>
                                     <div class="col-md-6 margin_boot">
                                        <div class="test_box">
                                           <i><img src="images/tes1.jpg" alt="#"/></i>
-                                          <h4>ROCOYO</h4>
-                                          <span>(It is a long )</span>
-                                          <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as </p>
+                                          <h4>Nasi Goreng Gila</h4>
+                                          <span>Sukabumi</span>
+                                          <p>Anda lapar kami puas</p>
                                        </div>
                                     </div>
                                  </div>
@@ -205,13 +199,13 @@
                <div class="row">
                   <div class="col-md-4">
                      <div class="titlepage">
-                        <h2>Contact Us</h2>
+                        <h2>Kontak Kami</h2>
                      </div>
                   </div>
                   <div class="col-md-8">
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +71 9087654321</li>
+                        <li><a href="https://goo.gl/maps/N7rD6mYGhXxXMCw78"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locations</li>
+                        <li><a href="https://api.whatsapp.com/send/?phone=6289610993387&text&type=phone_number&app_absent=0"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +6289610993387</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com</li>
                      </ul>
                   </div>
@@ -219,19 +213,19 @@
                      <form id="request" class="main_form">
                         <div class="row">
                            <div class="col-md-12 ">
-                              <input class="contactus" placeholder="Full Name" type="type" name="Full Name"> 
+                              <input class="contactus" placeholder="Nama Lengkap" type="type" name="Full Name"> 
                            </div>
                            <div class="col-md-12">
                               <input class="contactus" placeholder="Email" type="type" name="Email"> 
                            </div>
                            <div class="col-md-12">
-                              <input class="contactus" placeholder="Phone Number" type="type" name="Phone Number">                          
+                              <input class="contactus" placeholder="Nomor Telp" type="type" name="Phone Number">                          
                            </div>
                            <div class="col-md-12">
-                              <textarea class="textarea" placeholder="Message" type="type" Message="Name">Message </textarea>
+                              <textarea class="textarea" placeholder="Kritik & Saran" type="type" Message="Name"></textarea>
                            </div>
                            <div class="col-sm-col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                              <button class="send_btn">Send</button>
+                              <button class="send_btn">Kirim</button>
                            </div>
                            <div class="col-sm-col-xl-6 col-lg-6 col-md-6 col-sm-12">
                               <ul class="social_icon">
@@ -249,9 +243,9 @@
                         <figure><img src="images/map.jpg" alt="#"/></figure>
                      </div>
                      <form class="bottom_form">
-                        <h3>Newsletter</h3>
+                        <h3>Dapatkan Promo Menarik</h3>
                         <input class="enter" placeholder="Enter your email" type="text" name="Enter your email">
-                        <button class="sub_btn">subscribe</button>
+                        <button class="sub_btn">Subscribe</button>
                      </form>
                   </div>
                </div>
@@ -260,7 +254,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>Copyright 2019 All Right Reserved By <a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>Copyright 2023 All Right Reserved By <a href="https://html.design/"> Jual Gorengan 3k </a></p>
                      </div>
                   </div>
                </div>
