--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>mical</title>
+      <title>A3E AutoGarage</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -65,19 +65,13 @@
                                  <a class="nav-link" href="about.html">About</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="furnitures.html">Furnitures</a>
+                                 <a class="nav-link" href="furnitures.html">Services</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="testimonial.html">Testimonial</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="contact.html">Contact Us</a>
-                              </li>
-                              <li class="nav-item d_none">
-                                 <a class="nav-link" href="#"><i class="fa fa-user-circle padd_right" aria-hidden="true"></i>Login/Register</a>
-                              </li>
-                              <li class="nav-item d_none">
-                                 <a class="nav-link" href="#"><i class="fa fa-search" aria-hidden="true"></i></a>
                               </li>
                            </ul>
                         </div>
@@ -97,7 +91,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>About Our Car Service </h2>
+                     <h2>Sekilas Tentang Kami </h2>
                   </div>
                </div>
             </div>
@@ -106,9 +100,8 @@
                   <div class="col-md-10 offset-md-1">
                      <div class="about_img">
                         <div class="about_box">
-                           <h3>Dolor sit amet, consectetur adipiscing elit,  </h3>
+                           <h3>⚠ Anda Senang Kami Puas ⚠</h3>
                            <p>dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
-                           <a class="read_more">Read More</a>
                         </div>
                      </div>
                   </div>
@@ -125,13 +118,13 @@
                <div class="row">
                   <div class="col-md-4">
                      <div class="titlepage">
-                        <h2>Contact Us</h2>
+                        <h2>Kontak Kami</h2>
                      </div>
                   </div>
                   <div class="col-md-8">
                      <ul class="location_icon">
-                        <li><a href="#"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locatins</li>
-                        <li><a href="#"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +71 9087654321</li>
+                        <li><a href="https://goo.gl/maps/N7rD6mYGhXxXMCw78"><i class="fa fa-map-marker" aria-hidden="true"></i></a> Locations</li>
+                        <li><a href="https://api.whatsapp.com/send/?phone=6289610993387&text&type=phone_number&app_absent=0"><i class="fa fa-volume-control-phone" aria-hidden="true"></i></a> +6289610993387</li>
                         <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>demo@gmail.com</li>
                      </ul>
                   </div>
@@ -139,19 +132,19 @@
                      <form id="request" class="main_form">
                         <div class="row">
                            <div class="col-md-12 ">
-                              <input class="contactus" placeholder="Full Name" type="type" name="Full Name"> 
+                              <input class="contactus" placeholder="Nama Lengkap" type="type" name="Full Name"> 
                            </div>
                            <div class="col-md-12">
                               <input class="contactus" placeholder="Email" type="type" name="Email"> 
                            </div>
                            <div class="col-md-12">
-                              <input class="contactus" placeholder="Phone Number" type="type" name="Phone Number">                          
+                              <input class="contactus" placeholder="Nomor Telp" type="type" name="Phone Number">                          
                            </div>
                            <div class="col-md-12">
-                              <textarea class="textarea" placeholder="Message" type="type" Message="Name">Message </textarea>
+                              <textarea class="textarea" placeholder="Kritik & Saran" type="type" Message="Name"></textarea>
                            </div>
                            <div class="col-sm-col-xl-6 col-lg-6 col-md-6 col-sm-12">
-                              <button class="send_btn">Send</button>
+                              <button class="send_btn">Kirim</button>
                            </div>
                            <div class="col-sm-col-xl-6 col-lg-6 col-md-6 col-sm-12">
                               <ul class="social_icon">
@@ -169,9 +162,9 @@
                         <figure><img src="images/map.jpg" alt="#"/></figure>
                      </div>
                      <form class="bottom_form">
-                        <h3>Newsletter</h3>
+                        <h3>Dapatkan Promo Menarik</h3>
                         <input class="enter" placeholder="Enter your email" type="text" name="Enter your email">
-                        <button class="sub_btn">subscribe</button>
+                        <button class="sub_btn">Subscribe</button>
                      </form>
                   </div>
                </div>
@@ -180,7 +173,7 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-12">
-                        <p>Copyright 2019 All Right Reserved By <a href="https://html.design/"> Free  html Templates</a></p>
+                        <p>Copyright 2023 All Right Reserved By <a href="https://html.design/"> Jual Gorengan 3k</a></p>
                      </div>
                   </div>
                </div>
